revisions and nearby info

--- a/_layouts/savethedate.html
+++ b/_layouts/savethedate.html
@@ -19,9 +19,18 @@
       {% include rsvp.html %}
       {% include calendar.html %}
       {% include photos.html %}
-      {% include details.html %}
-    </div>
 
+      <div class="info-box">
+        <div class="cactusbirds-box">
+          <a href="cactusbirds.png">
+            <img class="cactusbirds" src="cactusbirds.png" alt="cactusbirds"></img>
+          </a>
+        </div>
+        <div class="info">
+          {% include details.html %}
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
