--- a/_includes/details.html
+++ b/_includes/details.html
@@ -1,4 +1,4 @@
-<details>
+<details open name="deets">
     <summary>
         <h2>&nbsp;Itenerary</h2>
     </summary>
@@ -8,69 +8,69 @@
     {% endfor %}
 </details>
 
-<details>
+<details name="deets">
     <summary>
         <h2>&nbsp;Gifts</h2>
     </summary>
-    <p>We strongly value community and are grateful that you're coming to celebrate with us! So instead of physical
-        items,
-        we are requesting experiences you can provide or participate in during the wedding celebration. For example, you
-        could take a short shift making cocktails at the bar (supplies provided), play a song (open mic style), take
-        (and
-        share) photos or bring a polaroid to be passed around, provide some craft supplies or art for the guest book,
-        bring
-        some flowers for decoration, lead a short nature walk, lend a bike for someone to try out the trails at the
-        venue,
-        lend a simple lawn game to play, etc. Please indicate if you are interested in providing something in the RSVP
-        form
-        or message us directly!
+    <p>We value community more than gifts, so we're grateful that you're coming to celebrate with us! </p>
+    <p>If you'd still like to do something for us, consider providing an experience for others at the wedding.
+        You could take a short shift making cocktails at the bar (supplies provided), play a song (open mic
+        style), take (and share) photos or bring a polaroid to be passed around, provide some craft supplies or art for
+        the guest book, bring some flowers for decoration, lead a short nature walk, lend a bike for someone to try out
+        the trails at the venue, lend a simple lawn game to play, etc. Please indicate any ideas in the RSVP form or
+        message us directly!
     </p>
 </details>
 
-<details>
+<details name="deets">
+    <summary>
+        <h2>&nbsp;Food</h2>
+    </summary>
+    <p>Vegetarian food will be provided, including appetizers, salad, and pizza. Gluten-free and vegan variants are
+        available on request at the venue. Please use the RSVP form to indicate any dietary concerns. We don't expect to
+        run out of food, so eat your fill!</p>
+</details>
+
+<details name="deets">
     <summary>
         <h2>&nbsp;Accomodations</h2>
     </summary>
-    <p>Rustic accomodations are included with the venue. There are only 4 bathrooms on-site, however, so everyone still
+    <p>Rustic accomodations are included! There are only 4 bathrooms on-site, however, so everyone
         gets a campground experience. <a href="https://www.arizonanordicvillage.com/cabins-yurts">Cabins and yurts</a>
         include a wood-fired stove (subject to fire bans) and a power bank for charging devices, but no running water.
         These are limited, so we will assign cabins & yurts by the end of March to those who have RSVP’d. "Elders" and
-        people from out of state have priority.</p>
+        those from out of state have priority.</p>
+    <p>Options:</p>
     <ul>
-        <li>Camping is preferred, for those who are comfortable with it. There are 8 spaces for car camping and nearly
-            unlimited tent camping. If you are a happy camper but can't bring your own supplies, we can try to find some
-            for you!
+        <li>Camping is preferred, for those who are comfortable. There are 8 spaces for car camping and
+            unlimited tent camping. We can try to find supplies if you can't bring your own!
         </li>
         <li>One 30' yurt provides a lot of floor space for anyone willing to throw a sleeping bag on the floor.</li>
-        <li>Six yurts can sleep two adults each, plus maybe a good friend on the floor?</li>
-        <li>Four cabins can sleep four adults each, with a bed and two bunks. Could also fit someone on the floor here.
-        </li>
-        <li>Finally there are hotel and rental options in Flagstaff, ~20 minutes from the venue. We will try to connect
-            people who express interest in sharing a rental or a ride into town, and rideshare apps ought to work as
-            well.
+        <li>Six yurts can sleep two adults each.</li>
+        <li>Four cabins each sleep four adults in a bed and two bunks.</li>
+        <li>There are hotel and rental options in Flagstaff, ~20-30 minutes from the venue. We will try to connect
+            people to share rentals or a ride into town. Rideshare apps ought to reach the venue.
         </li>
     </ul>
 </details>
 
-<details>
+<details name="deets">
     <summary>
         <h2>&nbsp;Dress code</h2>
     </summary>
-    <p>Eclectic &mdash; You are encouraged to stand out in some way, but only if you'd enjoy it! Just respect a few
-        rules:
+    <p>Eclectic! You are encouraged to stand out in some way, but only if you'd enjoy it. Anything from formal to forest
+        is fine. Just respect a few rules:
     </p>
     <ul>
         <li>Footwear should be appropriate for uneven ground. Your calves might "stand out" in heels, but it's not worth
-            a
-            turned ankle.</li>
+            a turned ankle.</li>
         <li>Layer for comfort. June in Flagstaff is not like the rest of Arizona! Expect 70's during the day and low
-            40's at
-            night.</li>
+            40's at night.</li>
         <li>Do express yourself, but don't <i>aim</i> to upset anyone!</li>
     </ul>
 </details>
 
-<details>
+<details name="deets">
     <summary>
         <h2>&nbsp;Travel</h2>
     </summary>
@@ -88,7 +88,42 @@
     </p>
 </details>
 
-<!-- <p>Unless you plan to buy us a house, we're only interested in gifts of experience or community. If you can lead a
-    nature walk, mix some uncommon cocktails, or otherwise provide an experience for others at the wedding, please
-    indicate your ideas on the RSVP form. We're happy to fund cool ideas (within reason!), and your presence will be a
-    wonderful gift in itself!</p> -->
+<details name="deets">
+    <summary>
+        <h2>&nbsp;Nearby</h2>
+    </summary>
+    <p>Emma's favorite things to do near Flagstaff, to be updated as we get closer to the event. Maybe with a map!</p>
+    <b>Things to do</b>
+    <ul>
+        <li><a
+                href="https://www.trailforks.com/region/arizona-nordic-village-36952/?activitytype=1&z=12.5&lat=35.37559&lon=-111.75671&content=trails,labels,region,poi,directory,polygon,waypoint,nst,routes_featured">
+                Hiking / mountain biking at the venue
+            </a> (Arizona Nordic Center)</li>
+        <li><a href="https://www.alltrails.com/us/arizona/flagstaff">More hiking in Flagstaff</a>, of various lengths
+            and difficulties</li>
+        <li><a href="https://www.nps.gov/grca/index.htm">Visit the Grand Canyon</a>: only an hour drive north!</li>
+        <li><a href="https://visitsedona.com/">Visit Sedona</a>: only an hour drive south!</li>
+    </ul>
+
+    <b>Breweries</b>
+    <ul>
+        <li><a href="https://www.motherroadbeer.com/">Mother Road</a></li>
+        <li><a href="https://darkskybrewing.com/">Dark Sky</a></li>
+        <li><a href="https://www.historicbrewingcompany.com/">Historic</a></li>
+    </ul>
+
+    <b>Restaurants</b>
+    <ul>
+        <li><a href="https://martannes.com/">MartAnne's</a> &mdash; Good breakfast food!</li>
+        <li><a href="https://www.pizzicletta.com/">Pizzacletta</a></li>
+        <li><a href="https://www.josephinesrestaurant.com/">Josephine’s</a></li>
+        <li><a href="https://www.sosobaflg.com/">SoSoBa</a></li>
+    </ul>
+
+    <b>Cafés</b>
+    <ul>
+        <li><a href="https://macyscoffee.net/">Macy’s European Coffee House</a></li>
+        <li><a href="https://firecreekcoffee.com/">Firecreek Coffee</a></li>
+        <li><a href="https://www.kickstandkafe.com/">Kickstand Cafe</a></li>
+    </ul>
+</details>
