--- a/_sass/_savethedate.scss
+++ b/_sass/_savethedate.scss
@@ -25,6 +25,7 @@
 
 .text {
   text-align: center;
+  margin: 0;
 }
 
 .save-text {
@@ -34,17 +35,35 @@
 .caption {
   text-align: right;
   font-size: 12px;
-  margin: 0 5% 1.5rem;
-}
-
-.random-pic {
-  @include border-radius(10px);
-  width: 90%;
-  margin: 0 5% 0 5%;
+  margin: 0 0 0;
 }
 
 .calendars {
   display: block;
   text-align: center;
   margin-bottom: 1.5rem;
+}
+
+.info-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.cactusbirds-box {
+  display: inline-block;
+  width: 33%;
+}
+
+.cactusbirds {
+  width: 100%;
+  -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 1) 80%), to(rgba(0, 0, 0, 0)));
+  mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0));
+}
+
+.info {
+  display: inline-block;
+  align-items: center;
+  width: 64%
 }
